<resources>
    <string name="app_name">Coursework Tracker</string>
    <string name="add_coursework_title">Add Coursework</string>
    <string name="edit_coursework_title">Edit Coursework</string>
    <string name="button_add">Add</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="label_coursework_name">Coursework Name</string>
    <string name="label_module_name">Module Name</string>
    <string name="label_deadline">Deadline</string>
    <string name="label_weight">Weight</string>
    <string name="label_percent">%</string>
    <string name="label_notes">Notes</string>
    <string name="label_completed">Completed</string>
    <string name="label_show_completed">Show Completed Courseworks</string>
    <string name="hint_coursework_name">eg. Coursework 2</string>
    <string name="hint_module_name">eg. Software Engineering</string>
    <string name="hint_weight">eg. 10</string>
    <string name="hint_notes"></string>
    <string name="notification_title">Coursework Deadline</string>
    <string name="toast_coursework_saved">Coursework Saved</string>
    <string name="toast_coursework_deleted">Coursework Deleted</string>
</resources>
