<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.leeds.atcg_gdl.courseworktracker.EditActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_coursework_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/buttonDelete"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="60sp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:onClick="handleButtonDelete"
                    android:text="@string/button_delete"
                    android:textColor="@color/colorButtonText" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/buttonSave"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:onClick="handleButtonSave"
                    android:text="@string/button_save"
                    android:textColor="@color/colorButtonText" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_internal_margin"
                android:hint="@string/hint_coursework_name"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textViewModule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_module_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editTextModule"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_internal_margin"
                android:hint="@string/hint_module_name"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textViewDeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_deadline"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <DatePicker
                android:id="@+id/datePickerDeadline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_internal_margin"
                android:headerBackground="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textViewWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_weight"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_internal_margin"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="number"
                    android:hint="@string/hint_weight"/>

                <TextView
                    android:id="@+id/textViewPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_percent"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_notes"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editTextNotes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_internal_margin"
                android:ems="10"
                android:hint="@string/hint_notes"
                android:inputType="textMultiLine" />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_completed"
                android:textSize="17sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
